Custom dialoge for adding title for todo list is completed

--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -3,9 +3,10 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-    android:id="@+id/add"
+    android:id="@+id/addbutton"
     android:title="add"
     android:icon="@drawable/ic_note_add_black_24dp"
     app:showAsAction="always"
-    ></item>
+
+    > </item>
 </menu>
