--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
   <color name="red">#b4090f</color>
   <color name="text_color">#000000</color>
   <color name="popup_color">#afaaaa</color>
+  <color name="white">#FFFAFAFA</color>
 
 </resources>
